Adicionado Fases a Index.html
Se agrego enlace a la pagina design.html, que fue creada con la Fase 2.

--- a/index.html
+++ b/index.html
@@ -3,39 +3,62 @@
     h1 {
         text-align: center;
         font-family: Verdana;
-        color:midnightblue
+        color: midnightblue
     }
+
     h2 {
 
         text-align: center;
-        font-family:'Lucida Sans Regular';
+        font-family: 'Lucida Sans Regular';
         font-size: 1.5em;
-        color:yellowgreen;
-    
+        color: yellowgreen;
+
     }
+
     h3 {
 
         text-align: lef;
         font-family: Arial;
         font-size: small;
-        color:black;
+        color: black;
     }
-    .footer{ 
-       position: fixed;     
-       text-align: right;    
-       bottom: 0px; 
-       width: 97%;
-   }  
+
+    .footer {
+        position: fixed;
+        text-align: right;
+        bottom: 0px;
+        width: 97%;
+    }
+
+    .fasesdiv {
+        border: 2px outset black;
+        background-color: whitesmoke;
+        text-align: left;
+        width: 400px;
+        height: 250px;
+        margin: 10px;
+        position: relative;
+        right: 50px;
+        left: 430px;
+    }
 </style>
 <h1>Proyecto de Sitio Web </h1>
 <h2> Periodo 16 - 04 - 2021</h2>
+
 <body>
+    <div class="fasesdiv">
+        <h2 style="text-align: center; color: firebrick;"> Desarrollo Fases DSW </h2>
+        <ul style="font-family: Verdana;list-style-type: square;">
+            <li><a href="Fase 2/design.html"> Fase 2 </a></li>
+        </ul>
+    </div>
     <div class="footer">
-    Desarrollado por: <b> Octavio Guerra M</b><br> 
-    Programa: <b>Ingenieria de Sistemas- ECBTI</b><br>
-    Creado en: <b>Septiembre 4 - 2021</b><br>
-    e-mail: <b>oguerram@unadvirtual.edu.co</b><br>
-    whatsapp: <b>+57 3162291206</b>
-</div>
-</body> 
+        Desarrollado por: <b> Octavio Guerra M</b><br>
+        Programa: <b>Ingenieria de Sistemas- ECBTI</b><br>
+        Creado en: <b>Septiembre 4 - 2021</b><br>
+        e-mail: <b>oguerram@unadvirtual.edu.co</b><br>
+        whatsapp: <b>+57 3162291206</b>
+    </div>
+</body>
+
 </html>
