--- a/Fase 2/design.html
+++ b/Fase 2/design.html
@@ -237,6 +237,10 @@
         </p>
       </article>
       <hr>
+      <article>
+        <h2 style="color: darkblue;"> Mockup Propuesto </h2>
+        <img style="position: relative; right: 50px; left: 400px;" src="imagenes/mockup_image.JPG" alt="Mockup" width="500px" height="500px">
+     </article>
     </section>
     <footer style="text-align: right">
       e-mail: <b>octa17_gmun@outlook.com</b><br>
