Actualizacion de design.html
Adicionada a desgin.html el enlace para ver en el visor de mockup el diseno hecho.

--- a/Fase 2/design.html
+++ b/Fase 2/design.html
@@ -240,7 +240,10 @@
       <article>
         <h2 style="color: darkblue;"> Mockup Propuesto </h2>
         <img style="position: relative; right: 50px; left: 400px;" src="imagenes/mockup_image.JPG" alt="Mockup" width="500px" height="500px">
-     </article>
+        <br>
+        <a style="position: relative; right: 50px; left: 530px; font-family: Verdana;" href="https://app.moqups.com/ue7crK9nbn/view/page/a3780764b"> Click aqui para ir al visor de Mockup </a>
+      </article>
+      <hr>
     </section>
     <footer style="text-align: right">
       e-mail: <b>octa17_gmun@outlook.com</b><br>
