--- a/Fase 2/design.html
+++ b/Fase 2/design.html
@@ -51,7 +51,7 @@
 
 <body>
   <header>
-    <img src="imagenes/Logo_Universidad.jpg" alt="logo" height="50px" />
+    <img src="Imagenes/Logo_Universidad.jpg" alt="logo" height="50px" />
     <h2 style="display: inline">Universidad del Estado</h2>
     <h1 style="display: inline">Diseno de Sitios Web</h1>
     <h2 style="color: darkslateblue">Usando Flexbox, Lista & Enlaces</h2>
@@ -113,7 +113,7 @@
     <hr>
     <article>
       <h2 style="color: darkblue;"> Flexbox </h2>
-      <img style="position: relative; right: 50px; left: 400px;" src="imagenes/flexbox.png" alt="Flexbox"
+      <img style="position: relative; right: 50px; left: 400px;" src="Imagenes/flexbox.png" alt="Flexbox"
         height="200px">
       <h4
         style="position: relative;right: 50px; left: 450px; font-style: normal; font-size: small; font-family: Arial;">
@@ -170,7 +170,7 @@
     <hr>
     <article>
       <h2 style="color: darkblue;"> Listas </h2>
-      <img style="position: relative; right: 50px; left: 430px;" src="imagenes/listas_imagen.jpg" alt="Listas"
+      <img style="position: relative; right: 50px; left: 430px;" src="Imagenes/listas_imagen.jpg" alt="Listas"
         height="200px">
       <h4
         style="position: relative;right: 50px; left: 450px; font-style: normal; font-size: small; font-family: Arial;">
@@ -229,7 +229,7 @@
     <hr>
     <article>
       <h2 style="color: darkblue;"> Enlaces </h2>
-      <img style="position: relative; right: 50px; left: 500px;" src="imagenes/Enlace_Imagen.JPG" alt="Enlaces"
+      <img style="position: relative; right: 50px; left: 500px;" src="Imagenes/Enlace_Imagen.JPG" alt="Enlaces"
         height="200px">
       <h4
         style="position: relative;right: 50px; left: 400px; font-style: normal; font-size: small; font-family: Arial;">
@@ -297,7 +297,7 @@
     <hr>
     <article>
       <h2 style="color: darkblue;"> Mockup Propuesto </h2>
-      <img style="position: relative; right: 50px; left: 400px;" src="imagenes/mockup_image.JPG" alt="Mockup"
+      <img style="position: relative; right: 50px; left: 400px;" src="Imagenes/mockup_image.JPG" alt="Mockup"
         width="500px" height="500px">
       <br>
       <a style="position: relative; right: 50px; left: 530px; font-family: Verdana;"
