--- a/Fase 2/design.html
+++ b/Fase 2/design.html
@@ -51,7 +51,7 @@
 
 <body>
   <header>
-    <img src="Imagenes/Logo_Universidad.JPG" alt="logo" height="50px" />
+    <img src="Imagenes/Logo_Universidad.JPG" alt="Logo" height="50px" />
     <h2 style="display: inline">Universidad del Estado</h2>
     <h1 style="display: inline">Diseno de Sitios Web</h1>
     <h2 style="color: darkslateblue">Usando Flexbox, Lista & Enlaces</h2>
