Nuevos ajustes Fase 3
Adicionadas las paginas de los temas y agregadas nuevas imagenes

--- a/Fase 3/index.html
+++ b/Fase 3/index.html
@@ -13,16 +13,16 @@
     <img src="Imagenes/Logo_Universidad.JPG" alt="Logo" height="50px" />
     <h2 style="display: inline">Universidad del Estado</h2>
     <h1 style="display: inline">Aprende Diseño de Sitios Web</h1>
-    <h2 style="color: darkslateblue">Usando Flexbox, Lista & Enlaces</h2>
+    <h2 style="color: darkslateblue">Como usar Flexbox, Lista & Enlaces</h2>
   </header>
   <hr />
   <nav>
     <ul id=menupg>
-      <li><a>Inicio</a></li>
+      <li><a href="index.html">Inicio</a></li>
       <li><a>Temas</a>
         <ul>
-          <li><a>Flexbox</a></li>
-          <li><a>Listas & Enlaces</a></li>
+          <li><a href="temflexbox.html">Flexbox</a></li>
+          <li><a href="temlistenlaces.html"> Listas & Enlaces</a></li>
         </ul>
       </li>
 
@@ -45,7 +45,8 @@
       <h2 style="color: black">Proposito del Sitio</h2>
       <p>
         Como parte de la Estrategia educativa de la Universidad en Tecnologias
-        de Informacion (TI), presentamos un entrenamiento
+        de Informacion (TI), buscando la Universalidad del conocimiento, como es el proposito,
+        ofrecemos a traves de esta pagina aprendizaje y entrenamiento virtual 
         basico y avanzado del uso de los siguientes elementos en el Diseno de paginas Web:
       <ul style="list-style-type: square; font-family: Helvetica;">
         </p>
