--- a/Fase 3/temlistenlaces.html
+++ b/Fase 3/temlistenlaces.html
@@ -14,12 +14,12 @@
     </header>
     <section>
         <article>
-            <h2 style="color: darkblue;"> Listas </h2>
-            <img style="position: relative; right: 50px; left: 430px;" src="Imagenes/listas_imagen.jpg" alt="Listas"
-                height="200px">
+            <h2 style="font-size: large; color: darkblue;"> Listas </h2>
+            <img style="position: relative; right: 50px; left: 350px;" src="Imagenes/Lista_imagen2.PNG" alt="Listas"
+                height="300px">
             <h4
-                style="position: relative;right: 50px; left: 450px; font-style: normal; font-size: small; font-family: Arial;">
-                Imagen tomada de https://data-flair.training/blogs/html-lists/ </h4>
+                style="position: relative;right: 50px; left: 350px; font-style: normal; font-size: small; font-family: Arial;">
+                Imagen tomada de https://www.freecodecamp.org/news/html-list-how-to-use-bullet-points-ordered-and-unordered-lists/ </h4>
             <p style="justify-content: space-evenly;font-family: Arial;">
                 Permiten crear conjuntos de elementos para presentarlos en forma de lista en una pagina Web. Los
                 elementos que
@@ -85,12 +85,12 @@
         </article>
         <hr>
         <article>
-            <h2 style="color: darkblue;"> Enlaces </h2>
-            <img style="position: relative; right: 50px; left: 500px;" src="Imagenes/Enlace_Imagen.JPG" alt="Enlaces"
-                height="200px">
+            <h2 style="font-size: larger; color: darkblue;"> Enlaces </h2>
+            <img style="position: relative; right: 50px; left: 500px;" src="Imagenes/Enlaces_imagen2.jpeg" alt="Enlaces"
+                height="400px">
             <h4
                 style="position: relative;right: 50px; left: 400px; font-style: normal; font-size: small; font-family: Arial;">
-                Imagen tomada de https://www.agetec.org/ageteca/hipertexto_cultura.pdf </h4>
+                Imagen tomada de https://medium.com/@quadrishah846/adding-and-editing-links-in-html-14ff46342d3a </h4>
             <p style="justify-content: space-evenly;font-family: Arial;">
                 Los enlaces son el corazon y la parte vital en el lenguaje HTML. Son la razon de la existencia de la
                 Internet o
