Nuevos Aportes Fase 3
Ajustes y cambios hechos para la Fase 3

--- a/Fase 3/index.html
+++ b/Fase 3/index.html
@@ -33,11 +33,11 @@
       </ul>
       <li><a>Aprendizaje</a>
         <ul>
-          <li><a>Aprendizaje 1</a> </li>
-          <li><a>Aprendizaje 2</a> </li>
+          <li><a href="webenconstruccion.html">Aprendizaje 1</a> </li>
+          <li><a href="webenconstruccion.html">Aprendizaje 2</a> </li>
         </ul>
       </li>
-      <li><a>Autor</a></li>
+      <li><a href="autor.html">Autor</a></li>
     </ul>
   </nav>
   <main>
