--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
         <h2 style="text-align: center; color: firebrick;"> Desarrollo Fases DSW </h2>
         <ul style="font-family: Verdana;list-style-type: square;">
             <li><a href="Fase 2/design.html"> Fase 2 </a></li>
+            <li><a href="Fase 3/index.html">Fase 3</a></li>
         </ul>
     </div>
     <div class="footer">
         Desarrollado por: <b> Octavio Guerra M</b><br>
         Programa: <b>Ingenieria de Sistemas- ECBTI</b><br>
         Creado en: <b>Septiembre 4 - 2021</b><br>
+        Ultima Modificacion en: <b>Noviembre 2 - 2021</b><br>
         e-mail: <b>oguerram@unadvirtual.edu.co</b><br>
         whatsapp: <b>+57 3162291206</b>
     </div>
