Adjusts to Fase 3
New Adjusts done to Index.html

--- a/Fase 3/index.html
+++ b/Fase 3/index.html
@@ -56,7 +56,7 @@
       <article>
         <div class=divart1>
           <h2 style="color: darkblue;"> Flexbox </h2>
-          <img src="Imagenes/flexbox.png" alt="Flexbox" height="100px">
+          <img class="imgflex" src="Imagenes/flexbox.png" alt="Flexbox" height="100px">
           <h4 style="font-style: normal; font-size:smaller; font-family: Arial;">
             Imagen tomada de https://sharkcoder.com/layout/flexbox </h4>
           <p style="justify-content: space-evenly; font-size: small; font-family: Arial;"> Permite de
@@ -67,7 +67,7 @@
       <article>
         <div class=divart2>
           <h2 style="color: darkblue;"> Listas </h2>
-          <img src="Imagenes/listas_imagen.jpg" alt="Listas" height="100px">
+          <img class="imglist" src="Imagenes/listas_imagen.jpg" alt="Listas" height="100px">
           <h4 style="font-style: normal; font-size: smaller; font-family: Arial;">
             Imagen tomada de https://data-flair.training/blogs/html-lists/ </h4>
           <p style="justify-content: space-evenly; font-size: small; font-family: Arial;">
@@ -78,7 +78,7 @@
       <article>
         <div class=divart3>
           <h2 style="color: darkblue;"> Enlaces </h2>
-          <image src="Imagenes/Enlace_Imagen.JPG" alt="Enlaces" height="100px">
+          <image class="imgenlace" src="Imagenes/Enlace_Imagen.JPG" alt="Enlaces" height="100px">
             <h4 style="font-style: normal; font-size: smaller; font-family: Arial;">
               Imagen tomada de https://www.agetec.org/ageteca/hipertexto_cultura.pdf </h4>
             <p style="justify-content: space-evenly;font-size: small; font-family: Arial;">
