New Adjusts styles and index.html
Adjusts in styles (CSS) and index.html

--- a/Fase 3/index.html
+++ b/Fase 3/index.html
@@ -37,7 +37,7 @@
           <li><a href="webenconstruccion.html">Aprendizaje 2</a> </li>
         </ul>
       </li>
-      <li><a href="autor.html">Autor</a></li>
+      <li style="float:right"><a href="autor.html">Autor</a></li>
     </ul>
   </nav>
   <main>
