Included Pages of Digital Resources
Was included two pages of Digital resources, explaining Flexbox, Lists and Links or Hyperlinks

--- a/Fase 3/index.html
+++ b/Fase 3/index.html
@@ -26,11 +26,12 @@
         </ul>
       </li>
 
-      <li><a>Recursos Digitales</a></li>
-      <ul>
-        <li><a>Flexbox</a></li>
-        <li><a>Listas & Enlaces</a></li>
-      </ul>
+      <li><a>Recursos Digitales</a>
+        <ul>
+          <li><a href="recursodigit1.html">Videos Explicativos de Flexbox</a></li>
+          <li><a href="recursodigit2.html">Videos Explicativos de Listas & Enlaces</a></li>
+        </ul>
+      </li>
       <li><a>Aprendizaje</a>
         <ul>
           <li><a href="webenconstruccion.html">Aprendizaje 1</a> </li>
@@ -46,7 +47,7 @@
       <p>
         Como parte de la Estrategia educativa de la Universidad en Tecnologias
         de Informacion (TI), buscando la Universalidad del conocimiento, como es el proposito,
-        ofrecemos a traves de esta pagina aprendizaje y entrenamiento virtual 
+        ofrecemos a traves de esta pagina aprendizaje y entrenamiento virtual
         basico y avanzado del uso de los siguientes elementos en el Diseno de paginas Web:
       <ul style="list-style-type: square; font-family: Helvetica;">
         </p>
