--- a/Fase 3/temflexbox.html
+++ b/Fase 3/temflexbox.html
@@ -91,7 +91,7 @@
     skype: <b>octa17_gmun</b><br />
     Fecha Ultima actualizacion: <b>Noviembre 2 - 2021</b><br />
     <ul>
-        <li><a style="font-style: oblique; font-size: medium;"href=index.html>Volver al Menu Principal</a></li>
+        <li><a style="font-style: oblique; font-size: medium;"href=index.html>Volver a Home</a></li>
     </ul>
 </footer>
 
