--- a/Fase 3/autor.html
+++ b/Fase 3/autor.html
@@ -21,7 +21,7 @@
     
     Fecha Ultima actualizacion: <b>Noviembre 2 - 2021</b><br />
     <ul>
-        <li><a style="font-style: oblique; font-size: medium;" href=index.html>Volver al Menu Principal</a></li>
+        <li><a style="font-style: oblique; font-size: medium;" href=index.html>Volver a Home</a></li>
     </ul>
 </footer>
 
