--- a/Fase 3/recursodigit1.html
+++ b/Fase 3/recursodigit1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title> Recursos Multimedia </title>
+    <title> Recursos Multimedia I </title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 
