--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <ul style="font-family: Verdana;list-style-type: square;">
             <li><a href="Fase 2/design.html"> Fase 2 </a></li>
             <li><a href="Fase 3/index.html">Fase 3</a></li>
+            <li><a href="Fase 4/index.html">Fase 4</a></li>
         </ul>
     </div>
     <div class="footer">
