--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     h3 {
 
-        text-align: lef;
+        text-align: left;
         font-family: Arial;
         font-size: small;
         color: black;
