--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         left: 430px;
     }
 </style>
+<head>
 <h1>Proyecto de Sitio Web </h1>
 <h2> Periodo 16 - 04 - 2021</h2>
-
+</head>
 <body>
     <div class="fasesdiv">
         <h2 style="text-align: center; color: firebrick;"> Desarrollo Fases DSW </h2>
