--- a/index.html
+++ b/index.html
@@ -43,11 +43,23 @@
         left: 430px;
     }
 </style>
+
 <head>
-<h1>Proyecto de Sitio Web </h1>
-<h2> Periodo 16 - 04 - 2021</h2>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-Edge">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <title> Website design </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </head>
+
 <body>
+    <h1>Proyecto de Sitio Web </h1>
+    <h2> Periodo 16 - 04 - 2021</h2>
     <div class="fasesdiv">
         <h2 style="text-align: center; color: firebrick;"> Desarrollo Fases DSW </h2>
         <ul style="font-family: Verdana;list-style-type: square;">
