--- a/Fase 4/temflexbox.html
+++ b/Fase 4/temflexbox.html
@@ -49,6 +49,7 @@
                 centrar los
                 elementos
                 que deben ir en una pagina web.
+            </p>
 
                 Un Flexbox esta compuesto por dos items:
             <ul style="font-family: Arial;">
@@ -62,7 +63,7 @@
             </ul>
 
             <p style="justify-content: space-evenly;font-family: Arial;">Estas son las propiedades disponibles de los
-                Flexboxes:</p>
+                Flexboxes:
 
             <ul style="font-family: Arial;">
                 <li><b>Display-flex:</b> Establece el contenedor como un contenedor Flexible y permite que los hijos
@@ -77,6 +78,7 @@
                 </li>
                 <li><b>Flex-direction:</b> Especifica la direccion de los elementos flexibles </li>
             </ul>
+            </p>
 
 
 
