--- a/Fase 4/temflexbox.html
+++ b/Fase 4/temflexbox.html
@@ -6,24 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title> Flexbox - Que es ? </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
     <header class="container-fluid">
         <div class="row align-items-start, justify-content-center">
-          <div class=col-2> <img src="Imagenes/Logo_UE.JPG" alt="Logo_UE" height="80px"/> </div>
-          <div class=col-10>
-            <h1>Aprende Diseño de Sitios Web</h1>
-            <h2 style="color: darkslateblue">Que son Flexbox y Como usarlos en el Diseno de Paginas Web</h2>
-          </div>
-         </div>
-      </header>
-      <hr/>
-      <hr/>
-      <br/>
+            <div class=col-2> <img src="Imagenes/Logo_UE.JPG" alt="Logo_UE" height="80px" /> </div>
+            <div class=col-10>
+                <h1>Aprende Diseño de Sitios Web</h1>
+                <h2 style="color: darkslateblue">Que son Flexbox y Como usarlos en el Diseno de Paginas Web</h2>
+            </div>
+        </div>
+    </header>
+    <hr />
+    <hr />
+    <br />
     <section>
         <article>
             <img style="position: relative; right: 50px; left: 400px;" src="Imagenes/flexbox_imag2.png" alt="Flexbox"
@@ -51,7 +54,7 @@
                 que deben ir en una pagina web.
             </p>
 
-                Un Flexbox esta compuesto por dos items:
+            Un Flexbox esta compuesto por dos items:
             <ul style="font-family: Arial;">
                 <li><b>Contenedor:</b> Que como su nombre lo indica contendra los elementos que seran incorporados y
                     mostrados
@@ -92,7 +95,7 @@
                 <li>Martinez, C. Diciembre 21, 2017. Ventajas para comenzar a utilizar Flexbox. Disponible en:
                     https://blog.ida.cl/desarrollo/ventajas-utilizar-flexbox/. </li>
             </ul>
-            </p>
+            
         </article>
 
     </section>
@@ -104,7 +107,7 @@
     skype: <b>octa17_gmun</b><br />
     Fecha Ultima actualizacion: <b>Noviembre 28 - 2021</b><br />
     <ul>
-        <li><a style="font-style: oblique; font-size: medium;"href=index.html>Volver a Home</a></li>
+        <li><a style="font-style: oblique; font-size: medium;" href=index.html>Volver a Home</a></li>
     </ul>
 </footer>
 
