--- a/Fase 4/temflexbox.html
+++ b/Fase 4/temflexbox.html
@@ -102,13 +102,15 @@
 
 
 </body>
-<footer style="text-align: right; font-family: Verdana, Geneva, Tahoma, sans-serif;">
+<footer style="text-align: right; font-family: Verdana, Geneva, Tahoma, sans-serif">
+
     e-mail: <b>octa17_gmun@outlook.com</b><br>
     skype: <b>octa17_gmun</b><br />
     Fecha Ultima actualizacion: <b>Noviembre 28 - 2021</b><br />
     <ul>
         <li><a style="font-style: oblique; font-size: medium;" href=index.html>Volver a Home</a></li>
     </ul>
+
 </footer>
 
 </html>
