Added metas to all the webpages
added metas required to all the webpages

--- a/Fase 4/autor.html
+++ b/Fase 4/autor.html
@@ -2,6 +2,10 @@
 <html lang="es">
 
 <head>
+    <meta name="author" content="Octavio Guerra M" />
+    <meta name="keywords" content="Diseno, Web, Flexbox, Listas, Enlaces, UNAD" />
+    <meta name="description"
+        content="Este sitio contiene informacion sobre como usar los elementos Flexbox, Listas y Enlaces en Diseno Web" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
@@ -12,14 +16,15 @@
 <header>
     <h1>Datos del Autor</h1>
 </header>
+
 <body>
 
-    <img style="position: relative; right: 50px; left: 400px;" src="Imagenes/Imagen_autor.PNG" alt="Autor"
-        width="800px" height="400px">
+    <img style="position: relative; right: 50px; left: 400px;" src="Imagenes/Imagen_autor.PNG" alt="Autor" width="800px"
+        height="400px">
 
 </body>
 <footer style="text-align: center; font-family: Verdana, Geneva, Tahoma, sans-serif;">
-    
+
     Fecha Ultima actualizacion: <b>Noviembre 28 - 2021</b><br />
     <ul>
         <li><a style="font-style: oblique; font-size: medium;" href=index.html>Volver a Home</a></li>
