--- a/Fase 4/index.html
+++ b/Fase 4/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
+  <meta name="author" content="Octavio Guerra M" />
+  <meta name="keywords" content="Diseno, Web, Flexbox, Listas, Enlaces, UNAD" />
+  <meta name="description"
+    content="Este sitio contiene informacion sobre como usar los elementos Flexbox, Listas y Enlaces en Diseno Web" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE-Edge">
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <title> Pagina Principal </title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
   <header class="container-fluid">
     <div class="row align-items-start, justify-content-center">
-      <div class=col-2> <img src="Imagenes/Logo_UE.JPG" alt="Logo_UE" height="80px"/> </div>
+      <div class=col-2> <img src="Imagenes/Logo_UE.JPG" alt="Logo_UE" height="80px" /> </div>
       <div class=col-10>
         <h1>Aprende Diseño de Sitios Web</h1>
         <h2 style="color: darkslateblue">Como usar Flexbox, Lista & Enlaces</h2>
       </div>
-     </div>
+    </div>
   </header>
   <hr />
   <nav>
@@ -67,30 +75,40 @@
               <img class="imgflex" src="Imagenes/flexbox.png" alt="Flexbox" height="100px">
               <h4 style="font-style: normal; font-size:xx-small; font-family: Arial; text-align: center;">
                 Imagen tomada de https://sharkcoder.com/layout/flexbox </h4>
-                <p style="color: blue; justify-content: space-evenly; font-size: small; font-family:Verdana, Geneva, Tahoma, sans-serif;"> Permite de manera dinamica, organizar dentro de un contenedor los items, productos que sera presentados en la pagina en Desarrollo sin requerir, mayor codigo y es auto-ajustable a cambios en la pagina
-                </p>
+              <p
+                style="color: blue; justify-content: space-evenly; font-size: small; font-family:Verdana, Geneva, Tahoma, sans-serif;">
+                Permite de manera dinamica, organizar dentro de un contenedor los items, productos que sera presentados
+                en la pagina en Desarrollo sin requerir, mayor codigo y es auto-ajustable a cambios en la pagina
+              </p>
             </div>
             <div class="col-3 divart2">
               <h2 style="color: darkblue;"> Listas </h2>
               <img class="imglist" src="Imagenes/listas_imagen.jpg" alt="Listas" height="100px">
               <h4 style="font-style: normal; font-size:xx-small; font-family: Arial; text-align: center;">
                 Imagen tomada de https://data-flair.training/blogs/html-lists/ </h4>
-                <p style="color: white; justify-content: space-evenly; font-size: small; font-family:Verdana, Geneva, Tahoma, sans-serif">
-                  Permiten crear conjuntos de elementos para presentarlos en forma de lista en una pagina Web.
-                </p>
+              <p
+                style="color: white; justify-content: space-evenly; font-size: small; font-family:Verdana, Geneva, Tahoma, sans-serif">
+                Permiten crear conjuntos de elementos para presentarlos en forma de lista en una pagina Web.
+              </p>
             </div>
             <div class="col-3 divart3">
               <h2 style="color: darkblue;"> Enlaces </h2>
               <image class="imgenlace" src="Imagenes/Enlace_Imagen.JPG" alt="Enlaces" height="100px">
                 <h4 style="font-style: normal; font-size:xx-small; font-family: Arial; text-align: center;">
                   Imagen tomada de https://www.agetec.org/ageteca/hipertexto_cultura.pdf </h4>
-                  <p style="color:crimson; justify-content: space-evenly;font-size: small; font-family: Verdana, Geneva, Tahoma, sans-serif;">
-                    Los enlaces son el corazon y la parte vital en el lenguaje HTML. Son la razon de la existencia de la Internet o la WWW (World Wide Web).
-                  </p>
-              
+                <p
+                  style="color:crimson; justify-content: space-evenly;font-size: small; font-family: Verdana, Geneva, Tahoma, sans-serif;">
+                  Los enlaces son el corazon y la parte vital en el lenguaje HTML. Son la razon de la existencia de la
+                  Internet o la WWW (World Wide Web).
+                </p>
+
             </div>
             <div class=col-3>
-              <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+              <iframe
+                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                allowfullscreen="true"
+                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
           </div>
     </section>
