--- a/Fase 4/temlistenlaces.html
+++ b/Fase 4/temlistenlaces.html
@@ -2,28 +2,36 @@
 <html lang="es">
 
 <head>
+    <meta name="author" content="Octavio Guerra M" />
+    <meta name="keywords" content="Diseno, Web, Flexbox, Listas, Enlaces, UNAD" />
+    <meta name="description"
+        content="Este sitio contiene informacion sobre como usar los elementos Flexbox, Listas y Enlaces en Diseno Web" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title> Listas & Enlaces - Que son ? </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
     <header class="container-fluid">
         <div class="row align-items-start, justify-content-center">
-          <div class=col-2> <img src="Imagenes/Logo_UE.JPG" alt="Logo_UE" height="80px"/> </div>
-          <div class=col-10>
-            <h1>Aprende Diseño de Sitios Web</h1>
-            <h2 style="color: darkslateblue">Que son las Listas y los Enlaces y como usarlos en el Diseno de Paginas Web</h2>
-          </div>
-         </div>
+            <div class=col-2> <img src="Imagenes/Logo_UE.JPG" alt="Logo_UE" height="80px" /> </div>
+            <div class=col-10>
+                <h1>Aprende Diseño de Sitios Web</h1>
+                <h2 style="color: darkslateblue">Que son las Listas y los Enlaces y como usarlos en el Diseno de Paginas
+                    Web</h2>
+            </div>
+        </div>
     </header>
-      <hr/>
-      <hr/>
-      <br/>
+    <hr />
+    <hr />
+    <br />
     <section>
         <article>
             <h2 style="font-size: large; color: darkblue;"> Listas </h2>
@@ -31,7 +39,8 @@
                 height="300px">
             <h4
                 style="position: relative;right: 50px; left: 350px; font-style: normal; font-size: small; font-family: Arial;">
-                Imagen tomada de https://www.freecodecamp.org/news/html-list-how-to-use-bullet-points-ordered-and-unordered-lists/ </h4>
+                Imagen tomada de
+                https://www.freecodecamp.org/news/html-list-how-to-use-bullet-points-ordered-and-unordered-lists/ </h4>
             <p style="justify-content: space-evenly;font-family: Arial;">
                 Permiten crear conjuntos de elementos para presentarlos en forma de lista en una pagina Web. Los
                 elementos que
