--- a/Fase 3/temflexbox.html
+++ b/Fase 3/temflexbox.html
@@ -2,6 +2,10 @@
 <html lang="es">
 
 <head>
+    <meta name="author" content="Octavio Guerra M" />
+    <meta name="keywords" content="Diseno, Web, Flexbox, Listas, Enlaces, UNAD" />
+    <meta name="description"
+        content="Este sitio contiene informacion sobre como usar los elementos Flexbox, Listas y Enlaces en Diseno Web" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
@@ -92,7 +96,7 @@
     skype: <b>octa17_gmun</b><br />
     Fecha Ultima actualizacion: <b>Noviembre 2 - 2021</b><br />
     <ul>
-        <li><a style="font-style: oblique; font-size: medium;"href=index.html>Volver a Home</a></li>
+        <li><a style="font-style: oblique; font-size: medium;" href=index.html>Volver a Home</a></li>
     </ul>
 </footer>
 
