--- a/Fase 2/design.html
+++ b/Fase 2/design.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
+<head>
+  <meta name="author" content="Octavio Guerra M" />
+  <meta name="keywords" content="Diseno, Web, Flexbox, Listas, Enlaces, UNAD" />
+  <meta name="description"
+    content="Este sitio contiene informacion sobre como usar los elementos Flexbox, Listas y Enlaces en Diseno Web" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE-Edge">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <title> Pagina Principal </title>
+
+</head>
+
 <style>
   h1 {
     text-align: center;
