Added Metas rqquired
Added Metas Required in the head in all the webpages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <style>
     h1 {
         text-align: center;
@@ -45,6 +46,10 @@
 </style>
 
 <head>
+    <meta name="author" content="Octavio Guerra M" />
+    <meta name="keywords" content="Diseno, Web, Flexbox, Listas, Enlaces, UNAD" />
+    <meta name="description"
+        content="Este sitio contiene informacion sobre como usar los elementos Flexbox, Listas y Enlaces en Diseno Web" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
